* index.html: Mention mingw32 port.
	* gcj-3.1-status.html (ia64-*-linux-gnu): Now ok.
	(alpha-dec-osf5.1): Updated status; linked to test results.

--- a/htdocs/java/gcj-3.1-status.html
+++ b/htdocs/java/gcj-3.1-status.html
@@ -36,10 +36,8 @@ href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?database=gcc&amp;text=&amp;multitex
      <td> Tom </td>
 </tr>
 
-<tr bgcolor='#eeaaaa'> <td> IA-64 Linux</td>
-     <td> <a
-     href="http://gcc.gnu.org/ml/java/2002-03/msg00229.html">See Hans'
-     email</a>.  Hans resubmitted all patches </td>
+<tr bgcolor='#aaeeee'> <td>ia64-*-linux-gnu</td>
+     <td> Ok </td>
      <td> Hans, Andrew, et al </td>
 </tr>
 
@@ -74,7 +72,7 @@ href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?database=gcc&amp;text=&amp;multitex
      <td> Rainer </td>
 </tr>
 
-<tr bgcolor='#aaeeee'> <td> x86 Mingw32</td>
+<tr bgcolor='#aaeeee'> <td>i686-pc-mingw32</td>
      <td>Ok.  Only works as a target, not a host.
      Is still incomplete (at least Process does not work yet)
      </td>
@@ -93,8 +91,8 @@ href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?database=gcc&amp;text=&amp;multitex
      <td> Unknown </td>
 </tr>
 
-<tr bgcolor="#eeaaaa"> <td>alpha-dec-osf5.1</td>
-     <td> Bootstrap failure</td>
+<tr> <td>alpha-dec-osf5.1</td>
+     <td> Builds; see <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-03/msg00672.html">test results</a></td>
      <td> Rainer </td>
 </tr>
 
