--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -74,6 +74,17 @@ can see the <a href="libgcj-classpath-compare.html">status of the merge</a>.)
 <!-- News entries start here -->
 
 <tr><td valign="top">
+<b>March 10, 2002</b>
+</td><td>
+Adam Megacz has contributed a mingw32 port of libgcj.  This port is
+still a little bit incomplete (e.g., <code>java.lang.Process</code>
+doesn't work), and it currently only works as a target, not a host.
+Still, it works, and he is using it for <a
+href="http://www.xwt.org/">XWT</a>.  This work will appear in the
+upcoming 3.1 release.
+</td></tr>
+
+<tr><td valign="top">
 <b>February 28, 2002</b>
 </td><td>
 Bryce McKinlay has contributed a patch to optimize some of the array
