Add rs6000-ibm-aix4.3.2.0 for 3.0.4.

--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -947,6 +947,13 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>rs6000-ibm-aix4.3.2.0</td>
+<td>&nbsp;</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-03/msg01709.html">3.0.4</a></ltd>
+</tr>
+
+<tr>
 <td>rs6000-ibm-aix4.3.3.0</td>
 <td>&nbsp;</td>
 <td>Successful:
