* gcj-3.1-status.html (alpha-dec-osf4.0f): Ok. 	(alpha-dec-osf5.1): Ok.

--- a/htdocs/java/gcj-3.1-status.html
+++ b/htdocs/java/gcj-3.1-status.html
@@ -84,15 +84,13 @@ href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?database=gcc&amp;text=&amp;multitex
      <td> Andreas, Alexandre, others </td>
 </tr>
 
-<tr bgcolor="#eeaaaa"> <td>alpha-dec-osf4.0f</td>
-     <td> <a
-     href="http://gcc.gnu.org/ml/gcc-testresults/2002-03/msg00478.html">Many
-     regression failures</a> </td>
-     <td> Unknown </td>
+<tr bgcolor="#aaeeee"> <td>alpha-dec-osf4.0f</td>
+     <td> Ok </td>
+     <td> Rainer </td>
 </tr>
 
 <tr> <td>alpha-dec-osf5.1</td>
-     <td> Builds; see <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-03/msg00672.html">test results</a></td>
+     <td> Ok; see <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-03/msg00672.html">test results</a></td>
      <td> Rainer </td>
 </tr>
 
