--- a/htdocs/gcc-3.1/criteria.html
+++ b/htdocs/gcc-3.1/criteria.html
@@ -66,13 +66,12 @@ possible, the release will support other targets as well.</p>
 <tr><td>Intel x86</td><td>RedHat Linux 6.2</td>    <td>i686-pc-linux-gnu</td></tr>
 <tr><td>Intel x86</td><td>FreeBSD 4.5</td>
                       <td>i386-unknown-freebsd4.5</td>
-    <td><a href="mailto:obrien@freebsd.org">David O'Brien</a>
-    &amp; <a href="mailto:rittle@latour.rsch.comm.mot.com">Loren James Rittle</a></td>
+    <td><a href="mailto:rittle@latour.rsch.comm.mot.com">Loren James Rittle</a></td>
 </tr>
 <tr><td>MIPS</td>     <td>IRIX 6.5</td>            <td>mips-sgi-irix6.5</td></tr>
 <tr><td>PowerPC</td>  <td>AIX 4.3.3</td>
                       <td>powerpc-ibm-aix4.3.3.0</td>
-    <td><a href="mailto:dje@watson.ibm.com">David Edelsohn</a>
+    <td><a href="mailto:dje@watson.ibm.com">David Edelsohn</a></td>
 </tr>
 <tr><td>SPARC</td>    <td>Solaris 2.7</td>         <td>sparc-sun-solaris2.7</td></tr>
 </table>
@@ -104,9 +103,14 @@ answering questions and reviewing patches as time permits.</p>
 
 <table align="center">
 <caption>Secondary Evaluation Platforms</caption>
-<tr><th>Chip</th>     <th>OS</th>                  <th>Triplet</th>
-    <th>Tester</th></tr>
-<tr><td>PowerPC</td>  <td>GNU/Linux</td>           <td></td></tr>
+<tr><th>Chip</th>     <th>OS</th>
+                      <th>Triplet</th>
+    <th>Tester</th>
+</tr>
+<tr><td>PowerPC</td>  <td>GNU/Linux</td>
+                      <td>powerpc-linux-gnu</td></tr>
+    <td><a href="mailto:Franz.Sirl-kernel@lauterbach.com">Franz Sirl</a></td>
+</tr>
 <tr><td>SPARC</td>    <td>Debian GNU/Linux 2.2</td><td>sparc-sun-linux-gnu</td>
     <td><a href="mailto:bcollins@debian.org">Ben Collins</a></td></tr>
 <tr><td>ARM</td>      <td>GNU/Linux</td>           <td>armv4l-unknown-linux-gnu</td></tr>
