--- a/htdocs/gcc-3.1/criteria.html
+++ b/htdocs/gcc-3.1/criteria.html
@@ -108,7 +108,7 @@ answering questions and reviewing patches as time permits.</p>
     <th>Tester</th>
 </tr>
 <tr><td>PowerPC</td>  <td>GNU/Linux</td>
-                      <td>powerpc-linux-gnu</td></tr>
+                      <td>powerpc-linux-gnu</td>
     <td><a href="mailto:Franz.Sirl-kernel@lauterbach.com">Franz Sirl</a></td>
 </tr>
 <tr><td>SPARC</td>    <td>Debian GNU/Linux 2.2</td><td>sparc-sun-linux-gnu</td>
