--- a/htdocs/gcc-3.1/issues.html
+++ b/htdocs/gcc-3.1/issues.html
@@ -8,8 +8,12 @@
 
 <h1>GCC 3.1 Issues</h1>
 
-<p>This document contains the list of issues affecting the GCC 3.1
-release and miscellaneous information regarding same.</p>
+<p><b>This document is no longer being maintained.  The bugs that need
+to be fixed before the release are marked as high-priority items in
+GNATS.</b></p>
+
+<p>This document used to contain the list of issues affecting the GCC
+3.1 release and miscellaneous information regarding same.</p>
 
 <p><em>Please do not make changes to this document without the
 explicit approval of the <a
@@ -18,13 +22,6 @@ href="mailto:mark@codesourcery.com">Release Manager</a>.</em></p>
 <h2>Open Issues</h2>
 
 <dl>
-
-<dt><em>PR 5753</em></dt>
-<dd>
- <p><em>Unverified.</em></p>
-
- <p>Submitted by Peter Barada.</p>
-</dd>
 
 <dt><em>PR ada/5856</em></dt>
 <dd>
@@ -62,15 +59,6 @@ href="mailto:mark@codesourcery.com">Release Manager</a>.</em></p>
  <p>Performance regression on file I/O from GCC 2.95.x.</p>
 
  <p>Submitted by Stuart Anderson.</p>
-</dd>
-
-<dt><em>PR 5682</em></dt>
-<dd>
- <p><em>Unverified.</em></p>
-
- <p>ICE in build_secondary_vtable.</p>
-
- <p>Submitted by Nathan Sidwell.</p>
 </dd>
 
 <dt><em>PR 5449</em></dt>
@@ -127,15 +115,6 @@ href="mailto:mark@codesourcery.com">Release Manager</a>.</em></p>
  <p>Submitted by Joel Sherrill.</p>
 </dd>
 
-<dt><em>PR 5676</em></dt>
-<dd>
- <p><em>Unverified.</em></p>
-
- <p>V3 does not build on mcore-elf.</p>
-
- <p>Submitted by Joel Sherrill.</p>
-</dd>
-
 <dt><em>PR 3591</em></dt>
 <dd>
  <p><em>Unverified.</em></p>
@@ -161,13 +140,6 @@ href="mailto:mark@codesourcery.com">Release Manager</a>.</em></p>
  <p>crtbegin.o does not build on d30v-elf.</p>
 
  <p>Submitted by Joel Sherrill.</p>
-</dd>
-
-<dt><em>PR 5998</em></dt>
-<dd>
- <p>G++ tends not to use builtins when it used to do so.</p>
-
- <p>Submitted by Mike Stump.</p>
 </dd>
 
 <dt><em>gcj issues</em> </dt>
@@ -548,6 +520,40 @@ href="mailto:mark@codesourcery.com">Release Manager</a>.</em></p>
  <p>libiberty does not build on v850.</p>
 
  <p>Submitted by Joel Sherrill.</p>
+</dd>
+
+<dt><em>PR 5682</em></dt>
+<dd>
+ <p>Closed: Nathan Sidwell.</p>
+
+ <p>ICE in build_secondary_vtable.</p>
+
+ <p>Submitted by Nathan Sidwell.</p>
+</dd>
+
+<dt><em>PR 5676</em></dt>
+<dd>
+ <p>Duplicate of PR3591.</p>
+
+ <p>V3 does not build on mcore-elf.</p>
+
+ <p>Submitted by Joel Sherrill.</p>
+</dd>
+
+<dt><em>PR 5998</em></dt>
+<dd>
+ <p>Closed: Roger Sayle.</p>
+
+ <p>G++ tends not to use builtins when it used to do so.</p>
+
+ <p>Submitted by Mike Stump.</p>
+</dd>
+
+<dt><em>PR 5753</em></dt>
+<dd>
+ <p>Unreproducible.</p>
+
+ <p>Submitted by Peter Barada.</p>
 </dd>
 
 </dl>
