John David Anglin is going to test hppa2.0w-hp-hpux11.00.

--- a/htdocs/gcc-3.1/criteria.html
+++ b/htdocs/gcc-3.1/criteria.html
@@ -61,7 +61,10 @@ possible, the release will support other targets as well.</p>
                       <td>alpha-unknown-linux-gnu</td>
     <td><a href="mailto:rth@redhat.com">Richard Henderson</a></td>
 </tr>
-<tr><td>HPPA</td>     <td>HPUX 11.0</td>           <td>hppa2.0w-hp-hpux11.00</td></tr>
+<tr><td>HPPA</td>     <td>HPUX 11.0</td>
+                      <td>hppa2.0w-hp-hpux11.00</td>
+    <td><a href="mailto:dave@hiauly1.hia.nrc.ca">John David Anglin</a></td>
+</tr>
 <tr><td>Intel x86</td><td>Debian GNU/Linux 2.2</td><td>i386-pc-linux-gnu</td></tr>
 <tr><td>Intel x86</td><td>RedHat Linux 6.2</td>    <td>i686-pc-linux-gnu</td></tr>
 <tr><td>Intel x86</td><td>FreeBSD 4.5</td>
