* ast-optimizer.html: Move tree SSA description to a new page. 	* index.html: Update link to tree SSA page. 	* tree-ssa/call-graph.png: New file. 	* tree-ssa/index.html: New file. 	* tree-ssa/tree-opt.png: New file.

--- a/htdocs/projects/index.html
+++ b/htdocs/projects/index.html
@@ -115,7 +115,7 @@ under x86-linux and ppc-linux.</p>
 
 <h3><a name="ssa_for_trees">SSA for trees</a></h3>
 <p>Diego Novillo is working on implementing 
-<a href="ast-optimizer.html#ssa_for_trees">SSA analysis for trees</a>.</p>
+<a href="tree-ssa/">SSA analysis and optimization for trees</a>.</p>
 
 <h3><a name="cfgbranch">CFG branch</a></h3>
 <p>The <a href="cfg.html">cfg branch</a> is created to develop and
