--- a/htdocs/projects/ast-optimizer.html
+++ b/htdocs/projects/ast-optimizer.html
@@ -90,18 +90,11 @@ testing, which it is hoped will provide better -O3 performance.
 See <a href="/ml/gcc-patches/2001-07/msg00859.html">this thread</a>.</p>
 
 <h3><a name="ssa_for_trees">SSA for trees</a></h3>
-<p>This SSA implementation is based on M.J. Wolfe's Factored Use-Def (FUD)
-chains [1].  Building an SSA web early in the compile process will allow the
-implementation of more aggressive target-independent transformations.  This
-should simplify the job of lower level passes and hopefully produce better
-code.</p>
 
 <p>The tree SSA infrastructure is maintained by <a
 href="mailto:dnovillo@redhat.com">Diego Novillo
-&lt;dnovillo@redhat.com&gt;</a>.</p>
-
-<p>[1] Wolfe, M. J.  1996.  <em>High Performance Compilers for Parallel
-Computing</em>.  Redwood City, CA: Reading, Mass.: Addison-Wesley.</p>
+&lt;dnovillo@redhat.com&gt;</a>.  Documentation and plans about this 
+pass can be found in the <a href="tree-ssa/">tree SSA</a> page.</p>
 
 <h2>Contributing</h2>
 
