Replace "Mb" with "MB" for disk space usage.

--- a/htdocs/gcc-3.1/testing-qt.html
+++ b/htdocs/gcc-3.1/testing-qt.html
@@ -14,8 +14,8 @@ as part of GCC integration testing.</p>
 
 <p>The Qt distribution, available from Trolltech's site at
 <a href="ftp://ftp.trolltech.com/qt/source/qt-x11-2.3.0.tar.gz">
-qt-x11-2.3.0.tar.gz</a>, is an 8.7 Mb file.  The uncompressed distribution
-comprises 40 Mb of source files.  Building the package adds 40 to 75 Mb
+qt-x11-2.3.0.tar.gz</a>, is an 8.7 MB file.  The uncompressed distribution
+comprises 40 MB of source files.  Building the package adds 40 to 75 MB
 of object files and executables to this.</p>
 
 <p>Building the entire Qt distribution on a 750 Mhz Pentium III laptop
