* gcj-3.1-status.html (i386-*-freebsd*): Ok. 	(sun-sparc-solaris2.8): Two PRs unfixed. 	(alpha-dec-osf5.1): Build failure.

--- a/htdocs/java/gcj-3.1-status.html
+++ b/htdocs/java/gcj-3.1-status.html
@@ -26,8 +26,8 @@ href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?database=gcc&amp;text=&amp;multitex
      <td> Tom </td>
 </tr>
 
-<tr> <td>i386-*-freebsd*</td>
-     <td> Builds ok; <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-03/msg00284.html">many test failures</a> </td>
+<tr bgcolor='#aaeeee'> <td>i386-*-freebsd*</td>
+     <td> Ok </td>
      <td> Loren James Rittle </td>
 </tr>
 
@@ -51,8 +51,8 @@ href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?database=gcc&amp;text=&amp;multitex
      <td> Rainer </td>
 </tr>
 
-<tr bgcolor='#aaeeee'> <td> sparc-sun-solaris2.8 </td>
-     <td> Ok </td>
+<tr> <td> sparc-sun-solaris2.8 </td>
+     <td> Two known problems (see PR list) </td>
      <td> Rainer </td>
 </tr>
 
@@ -90,7 +90,7 @@ href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?database=gcc&amp;text=&amp;multitex
 </tr>
 
 <tr> <td>alpha-dec-osf5.1</td>
-     <td> Ok; see <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-03/msg00672.html">test results</a></td>
+     <td> Build failure; PR 6081 </td>
      <td> Rainer </td>
 </tr>
 
