--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -333,6 +333,13 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>i386-unknown-netbsdelf1.5ZA</td>
+<td>NetBSD 1.5ZA (BLUE); AMD K6-2</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-04/msg00244.html">3.0.4</a></td>
+</tr>
+
+<tr>
 <td>i386-unknown-openbsd3.0</td>
 <td>&nbsp;</td>
 <td>Successful (C, C++):
