The GNU Pascal homepage has moved. By Steven Bosscher <s.bosscher@student.tudelft.nl>.

--- a/htdocs/frontends.html
+++ b/htdocs/frontends.html
@@ -28,8 +28,7 @@ are very mature.</p>
 
 <ul>
 
-<li><a href="http://agnes.dida.physik.uni-essen.de/~gnu-pascal/">GNU
-Pascal Compiler</a> (GPC).</li>
+<li><a href="http://www.gnu-pascal.de/">GNU Pascal Compiler</a> (GPC).</li>
 
 <li><a
 href="http://www.cs.mu.oz.au/research/mercury/download/gcc-backend.html">Mercury</a>,
