--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -98,6 +98,13 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>alphaev56-dec-osf4.0d</td>
+<td>&nbsp;</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-04/msg00371.html">3.0.4</a></td>
+</tr>
+
+<tr>
 <td>alphaev56-dec-osf5.1</td>
 <td>&nbsp;</td>
 <td>Successful:
