* gcj-3.1-status.html (xscale-elf): HTML fix.

--- a/htdocs/java/gcj-3.1-status.html
+++ b/htdocs/java/gcj-3.1-status.html
@@ -94,7 +94,7 @@ href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?database=gcc&amp;text=&amp;multitex
      <td> Rainer </td>
 </tr>
 
-<tr bgcolor="aaeeee"> <td>linux -x- xscale-elf </td>
+<tr bgcolor='#aaeeee'> <td>linux -x- xscale-elf </td>
      <td> Ok </td>
      <td> AG </td>
 </tr>
