Remove duplicated sections.

--- a/htdocs/projects/cfg.html
+++ b/htdocs/projects/cfg.html
@@ -334,40 +334,6 @@ into different parts.
 A first version has been written and has been installed on the branch.
 It adds about 1% to spec2000 runs with profile feedback.</p>
 
-<h3>Flexible and Safe GCOV Format</h3>
-
-<p>This work is done by <a
-href="mailto:jh@suse.cz">Jan Hubicka</a>.</p>
-
-<h4>Theory</h4>
-
-<p>Currently the profile is fragile, since there is no verification
-that the compiled program matches the profiled data.  Since the
-profiler eliminates the redundancy in data, the mismatch is often not
-discovered at all thereby making results to be completely
-nonsense.</p>
-
-<h4>Implementation in GCC</h4>
-
-<p>We plan to calculate a checksum (CRC) of each graph when it is
-constructed.  Also the format will be extended so that more
-information can be recorded, such as histograms for the number of
-iterations for loops that can then be used for loop peeling and loop
-unrolling.</p>
-
-<p>We also want to add versioning and further information to make it
-look like a real file format.</p>
-
-<p>There are a few references to much more advanced profiling systems
-in <a href="#3">[3]</a>.</p>
-
-<h4>Status</h4>
-
-<p>First version is included in the branch. Due to ability to compute
-overall summary of counters it allows detection of hot spots in program
-and improves to detect hot spots better reducing code size and improving
-performance occasionally.</p>
-
 <h3>MIDlevel RTL</h3>
 
 <p>This work is done by <a
@@ -385,7 +351,7 @@ passes.</p>
 
 <h4>Implementation in GCC</h4>
 
-<p>The following outline has been writen by Jeff Law:</p>
+<p>The following outline has been written by Jeff Law:</p>
 <pre>
 Particularly for the task of building the machine description for the generic
 RTL and the translation from generic RTL into target specific RTL.  Those two
