--- a/htdocs/gcc-3.1/criteria.html
+++ b/htdocs/gcc-3.1/criteria.html
@@ -51,7 +51,7 @@ targets.  The targets chosen represent both the most popular operating
 systems and the most popular microprocessors.  Of course, where
 possible, the release will support other targets as well.</p>
 
-<table align="center">
+<table align="center" border="1">
 <caption>Primary Evaluation Platforms</caption>
 <tr><th>Chip</th>     <th>OS</th>                  
                       <th>Triplet</th>
@@ -104,7 +104,7 @@ efforts as necessary.  The release manager, and the GCC development
 team, will make reasonable efforts to assist these volunteers by
 answering questions and reviewing patches as time permits.</p>
 
-<table align="center">
+<table align="center" border="1">
 <caption>Secondary Evaluation Platforms</caption>
 <tr><th>Chip</th>     <th>OS</th>
                       <th>Triplet</th>
@@ -176,12 +176,13 @@ applications.  The following applications represent a mix of low-level
 and high-level code, of numerical and logical programs, and of
 different programming languages.</p>
 
-<table align="center">
+<table align="center" border="1">
 <caption>Integration Tests</caption>
 <tr><th>Name</th>
     <th>Language</th>
     <th>Version</th>
     <th>Source URL</th>
+    <th>Build and test guide</th>
 </tr>
 <tr><td><a href="http://www.kernel.org">Linux kernel</a></td>
     <td>C</td>
@@ -198,20 +199,20 @@ different programming languages.</p>
 <tr><td><a href="http://www.acl.lanl.gov/pooma/">POOMA</a></td>
     <td>C++</td>
     <td>2.2.0</td>
-    <td><a href="http://www.acl.lanl.gov/distributions/pooma-2.3.0.tgz">
-        pooma-2.3.0.tgz</a></td>
+    <td><a href="http://www.acl.lanl.gov/distributions/pooma-2.3.0.tgz">pooma-2.3.0.tgz</a></td>
+    <td><a href="testing-pooma.html">build and test guide</a>
 </tr>
 <tr><td><a href="http://www.oonumerics.org/blitz/">Blitz</a></td>
     <td>C++</td>
     <td>20001213</td>
-    <td><a href="http://www.oonumerics.org/blitz/download/snapshots/blitz-20001213.tar.gz">
-        blitz-20001213.tar.gz</a></td>
+    <td><a href="http://www.oonumerics.org/blitz/download/snapshots/blitz-20001213.tar.gz">blitz-20001213.tar.gz</a></td>
+    <td><a href="testing-blitz.html">build and test guide</a>
 </tr>
 <tr><td><a href="http://www.boost.org/">Boost</a></td>
     <td>C++</td>
     <td>1.22.0</td> <!-- the download link they give here isn't versioned... -->
-    <td><a href="http://www.boost.org/boost_all.tar.gz">
-        boost_all.tar.gz</a></td>
+    <td><a href="http://www.boost.org/boost_all.tar.gz">boost_all.tar.gz</a></td>
+    <td><a href="testing-boost.html">build and test guide</a>
 </tr>
 <tr><td><a href="http://root.cern.ch/">root</a></td>
     <td>C++</td>
@@ -234,8 +235,8 @@ different programming languages.</p>
 <tr><td><a href="http://www.trolltech.com/products/qt/index.html">Qt</a></td>
     <td>C++</td>
     <td>2.3.0</td>
-    <td><a href="ftp://ftp.trolltech.com/qt/source/qt-x11-2.3.0.tar.gz">
-        qt-x11-2.3.0.tar.gz</a></td>
+    <td><a href="ftp://ftp.trolltech.com/qt/source/qt-x11-2.3.0.tar.gz">qt-x11-2.3.0.tar.gz</a></td>
+    <td><a href="testing-qt.html">build and test guide</a>
 </tr>
 <tr><td><a href="http://www.cs.wustl.edu/~schmidt/ACE.html">ACE</a></td>
     <td>C++</td>
@@ -246,8 +247,8 @@ different programming languages.</p>
 <tr><td><a href="http://www.netlib.org/lapack/index.html">LAPACK</a></td>
     <td>Fortran</td>
     <td>3.0</td>
-    <td><a href="http://www.netlib.org/lapack/lapack.tgz">
-        LAPACK (testing programs)</a></td>
+    <td><a href="http://www.netlib.org/lapack/lapack.tgz">LAPACK (testing programs)</a></td>
+    <td><a href="testing-lapack.html">build and test guide</a>
 </tr>
 </table>
 
@@ -269,14 +270,10 @@ of G++ to deal with templates, an area that has historically been buggy.
 In addition, templates have historically taken inordinately much time and
 memory at compile-time.  With the widespread prevalence of templates in
 C++ programs, including the standard library, testing this area heavily is
-vitally important.  For instructions on how to set up and build POOMA and
-check the outcome of its testing programs see <a href="testing-pooma.html">
-this guide</a>.</p>
+vitally important.</p>
 
 <p>LAPACK is a well known linear algebra package that contains code
-typical for large scale Fortran programs.  For instructions on how to set
-up and build LAPACK and check the outcome of its testing programs see <a
-href="testing-lapack.html">this guide</a>.</p>
+typical for large scale Fortran programs.</p>
 
 <h3>Code Quality</h3>
 
@@ -286,7 +283,7 @@ the generated code performs approximately as well as previous releases.
 Therefore, we will use the following benchmarks for measuring code
 quality:</p>
 
-<table align="center">
+<table align="center" border="1">
 <tr><th align="left">Name</th>
     <th align="left">Language</th>
     <th align="left">Source URL</th>
@@ -329,7 +326,7 @@ will have a non-zero cost.</p>
 
 <p>In order to measure compile-time performance, we will use the
 following unit tests:</p>
-<table>
+<table align="center" border="1">
 <tr><th align="left">Name</th>
     <th align="left">Language</th>
     <th align="left">Source</th>
