--- a/htdocs/gcc-3.1/criteria.html
+++ b/htdocs/gcc-3.1/criteria.html
@@ -65,18 +65,18 @@ possible, the release will support other targets as well.</p>
                       <td>hppa2.0w-hp-hpux11.00</td>
     <td><a href="mailto:dave@hiauly1.hia.nrc.ca">John David Anglin</a></td>
 </tr>
-<tr><td>Intel x86</td><td>Debian GNU/Linux 2.2</td><td>i386-pc-linux-gnu</td></tr>
-<tr><td>Intel x86</td><td>RedHat Linux 6.2</td>    <td>i686-pc-linux-gnu</td></tr>
+<tr><td>Intel x86</td><td>Debian GNU/Linux 2.2</td><td>i386-pc-linux-gnu</td><td>&nbsp;</td></tr>
+<tr><td>Intel x86</td><td>RedHat Linux 6.2</td>    <td>i686-pc-linux-gnu</td><td>&nbsp;</td></tr>
 <tr><td>Intel x86</td><td>FreeBSD 4.5</td>
                       <td>i386-unknown-freebsd4.5</td>
     <td><a href="mailto:rittle@latour.rsch.comm.mot.com">Loren James Rittle</a></td>
 </tr>
-<tr><td>MIPS</td>     <td>IRIX 6.5</td>            <td>mips-sgi-irix6.5</td></tr>
+<tr><td>MIPS</td>     <td>IRIX 6.5</td>            <td>mips-sgi-irix6.5</td><td>&nbsp;</td></tr>
 <tr><td>PowerPC</td>  <td>AIX 4.3.3</td>
                       <td>powerpc-ibm-aix4.3.3.0</td>
     <td><a href="mailto:dje@watson.ibm.com">David Edelsohn</a></td>
 </tr>
-<tr><td>SPARC</td>    <td>Solaris 2.7</td>         <td>sparc-sun-solaris2.7</td></tr>
+<tr><td>SPARC</td>    <td>Solaris 2.7</td>         <td>sparc-sun-solaris2.7</td><td>&nbsp;</td></tr>
 </table>
 
 <p>GCC's performance on the following platforms will not be required
@@ -116,8 +116,8 @@ answering questions and reviewing patches as time permits.</p>
 </tr>
 <tr><td>SPARC</td>    <td>Debian GNU/Linux 2.2</td><td>sparc-sun-linux-gnu</td>
     <td><a href="mailto:bcollins@debian.org">Ben Collins</a></td></tr>
-<tr><td>ARM</td>      <td>GNU/Linux</td>           <td>armv4l-unknown-linux-gnu</td></tr>
-<tr><td>Intel x86</td><td>Cygwin</td>              <td>i686-pc-cygwin</td></tr>
+<tr><td>ARM</td>      <td>GNU/Linux</td>           <td>armv4l-unknown-linux-gnu</td><td>&nbsp;</td></tr>
+<tr><td>Intel x86</td><td>Cygwin</td>              <td>i686-pc-cygwin</td><td>&nbsp;</td></tr>
 </table>
 
 <h2>Language Support</h2>
@@ -287,7 +287,7 @@ quality:</p>
     <th align="left">Language</th>
     <th align="left">Source URL</th>
 </tr>
-<tr><td>gzip 1.2.4a</td><td>C</td>
+<tr><td>gzip 1.2.4a</td><td>C</td><td>&nbsp;</td>
 </tr>
 <tr><td>Stepanov</td><td>C++</td>
     <td><a href="ftp://ftp.kai.com/pub/benchmarks/stepanov_v1p2.C">
@@ -334,17 +334,23 @@ following unit tests:</p>
 </tr>
 <tr><td>insn-attrtab.c</td>
     <td>C</td>
-    <td></td>
+    <td>&nbsp;</td>
     <td>-O2</td>
     <td>This file contains a large machine-generated switch
         statement; it is a reasonable benchmark for testing flow
         optimizations and for handling large functions.</td>
 </tr>
-<tr><td></td>
+<tr><td>&nbsp;</td>
     <td>C++</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
 </tr>
-<tr><td></td>
+<tr><td>&nbsp;</td>
     <td>Fortran</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
 </tr>
 </table>
 
