Add a link to the DLX port. Move PentiumGCC to the Museum section.

--- a/htdocs/extensions.html
+++ b/htdocs/extensions.html
@@ -12,17 +12,13 @@ reason or the other, did not (yet) make it into the official source
 tree. Please direct feedback and bugreports to their respective
 maintainers, not our mailing lists.</p>
 
-<h2><a href="http://www.goof.com/pcg/index.html">PentiumGCC</a></h2>
-<p>The PentiumGCC (short PGCC) is an extension of GCC specifically
-aimed at the newer Intel chips and their clones (Pentium, PPro,
-Pentium-II and the Cyrix6x86 and AMD-K6+ chips). The current goal is
-to enhance GCC to a point where it generates code as fast as PGCC,
-but until that work is finished PGCC is still maintained, and often
-achieves substantial speed improvements over GCC.</p>
-
 <h2><a href="http://medo.fov.uni-mb.si/mapp/uTools/">ATMEL AVR port</a></h2>
 <p>This is an experimental port for the 8bit ATMEL AVR micro
 controllers.</p>
+
+<h2><a href="http://www-mount.ee.umn.edu/~okeefe/mcerg/gcc-dlx.html">DLX port</a></h2>
+<p>A GCC Machine Description for the DLX machine described in Computer
+Architecture: A Quantitative Approach by Hennessy and Patterson.</p>
 
 <h2><a href="http://home.worldnet.fr/~stcarrez/m68hc11_port.html">M68HC11
 port</a></h2>
@@ -106,6 +102,11 @@ be helpful to consult for future development.</p>
 tools for the TMS340x0</a></h2>
 
 <p>A GCC port to a <em>bit-addressable</em> architecture.</p>
+
+<h2><a href="http://www.goof.com/pcg/index.html">PentiumGCC</a></h2>
+
+<p>The PentiumGCC (short PGCC) was an extension of GCC specifically
+aimed at the newer Intel chips and their clones.</p>
 
 </body>
 </html>
