2002-04-12  Toon Moene  <toon@moene.indiv.nluug.nl>
	* changes.html: Point to Fortran news for Fortran changes.

--- a/htdocs/gcc-3.1/changes.html
+++ b/htdocs/gcc-3.1/changes.html
@@ -49,6 +49,9 @@
     <li><code>java.lang.Character</code> was rewritten to comply with
         the Unicode 3.0 standard.</li>
     <li>Partial support for many more locales was added to libgcj.</li>
+    <li>Fortran improvements are listed in              
+        <a href="http://gcc.gnu.org/onlinedocs/g77_news.html">the Fortran
+        documentation</a>.</li>
   </ul>
   </li>
 
