--- a/htdocs/gcc-3.1/criteria.html
+++ b/htdocs/gcc-3.1/criteria.html
@@ -203,6 +203,13 @@ different programming languages.</p>
     <td><a href="http://www.boost.org/boost_all.tar.gz">boost_all.tar.gz</a></td>
     <td><a href="testing-boost.html">build and test guide</a></td>
 </tr>
+<tr><td><a href="http://superbeast.ucsd.edu/~landry/FTensor/">FTensor</a></td>
+    <td>C++</td>
+    <td>1.1 patch 16</td>
+    <td><a href="http://www.oonumerics.org/FTensor/FTensor_gcc_integration_test.tar.gz">
+         FTensor_gcc_integration_test.tar.gz</a></td>
+    <td><a href="testing-ftensor.html">build and test guide</a></td>
+</tr>
 <tr><td><a href="http://www.gnu.org/software/emacs/">GNU Emacs</a></td>
     <td>C</td>
     <td>20.6</td>
