--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -533,7 +533,8 @@ Installing GCC: Final Installation</a>.</p>
 <td>Cygwin-1.3.10 on Windows 2000 5.0</td>
 <td>Successful (C, C++):
 <a href="http://gcc.gnu.org/ml/gcc/2002-03/msg00197.html">3.0.3</a>,
-<a href="http://gcc.gnu.org/ml/gcc/2002-03/msg01602.html">3.0.4</a></td>
+<a href="http://gcc.gnu.org/ml/gcc/2002-03/msg01602.html">3.0.4</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2002-04/msg00566.html">3.0.4</a></td>
 </tr>
 
 <tr>
