Link from our releases page to the future development schedule.

--- a/htdocs/develop.html
+++ b/htdocs/develop.html
@@ -214,7 +214,7 @@ able to accumulate fixes for the most important problems, and avoid
 spending undue amounts of time on release testing and packaging.</p>
 
 
-<h3>Calendar</h3>
+<h3><a name="future">Calendar</a></h3>
 
 <p>Here is a timeline of recent and upcoming branchpoints (for releases,
 stages of development, bugfixes, etc), resulting from the development plan:</p>
