--- a/htdocs/releases.html
+++ b/htdocs/releases.html
@@ -23,13 +23,13 @@ page</a>.</p>
 
 <h2><a name="timeline">Timeline</a></h2>
 
+<p>Please refer to our <a href="develop.html#future">development plan</a>
+for future releases.</p>
+
 <p>The egcs project maintained two kinds of version numbers. One was of the
 form 2.9x.yy and indicated the relationship between the GCC sources and
 the EGCS sources; the other version number identified EGCS releases (as
 opposed to development snapshots).</p>
-
-<p> After the April 1999 merger between GCC and EGCS, only a single version
-number is maintained.</p>
 
 <table border="1" cellspacing="0" cellpadding="5">
 <tr><th>Release Name</th><th>Version number</th><th>Release date</th></tr>
