The Chill front end has been removed.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -117,7 +117,7 @@ as the official GNU maintainer for GCC.  At that time GCC was renamed
 from the "GNU C Compiler" to the "GNU Compiler Collection" and received
 a new <a href="gccmission.html">mission statement</a>.</p>
 
-<p>Currently GCC contains front ends for C, C++, Objective C, Chill,
+<p>Currently GCC contains front ends for C, C++, Objective C, 
 Fortran, and <a href="java/">Java</a>
 as well as libraries for these languages (<a href="libstdc++/">libstdc++</a>,
 libgcj,...).  The next major release, <a href="gcc-3.1/criteria.html">GCC 3.1</a>, 
@@ -152,6 +152,12 @@ and automated testers</a> to maintain and improve quality.
 <h2>News/Announcements</h2>
 
 <dl>
+
+<dt><b>April 15, 2002</b></dt>
+<dd>
+The Chill front end (that already was omitted from GCC 3.0) has been removed
+from the GCC source tree.
+</dd>
 
 <dt><b>February 25, 2002</b></dt>
 <dd>
