--- a/htdocs/frontends.html
+++ b/htdocs/frontends.html
@@ -8,7 +8,7 @@
 <h1>GCC Front Ends</h1>
 
 <p>Currently the main GCC distribution contains front ends for C
-(gcc), C++ (g++), Objective C, Chill (unmaintained),
+(gcc), C++ (g++), Objective C,
 Fortran (g77), Java (<a
 href="java/">GCJ</a>), and Ada (GNAT).  GCC 3.1 will be the first official
 version of GCC to include the Ada front end.</p>
