* gcj-3.1-status.html (alpha-dec-osf5.1): Ok.

--- a/htdocs/java/gcj-3.1-status.html
+++ b/htdocs/java/gcj-3.1-status.html
@@ -89,8 +89,8 @@ href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?database=gcc&amp;text=&amp;multitex
      <td> Rainer </td>
 </tr>
 
-<tr> <td>alpha-dec-osf5.1</td>
-     <td> Build failure; PR 6081 </td>
+<tr bgcolor='#aaeeee'> <td>alpha-dec-osf5.1</td>
+     <td> Ok </td>
      <td> Rainer </td>
 </tr>
 
