2002-04-18  Paolo Carlini  <pcarlini@unitus.it>
	* htdocs/gcc-3.1/criteria.html: Update link to Pooma
	(from plain 2.3.0 to gcc.gnu.org hosted pooma-gcc).
	* htdocs/gcc-3.1/testing-pooma.html: Tweak.

--- a/htdocs/gcc-3.1/criteria.html
+++ b/htdocs/gcc-3.1/criteria.html
@@ -240,7 +240,7 @@ different programming languages.</p>
 <tr><td><a href="http://www.acl.lanl.gov/pooma/">POOMA</a></td>
     <td>C++</td>
     <td>2.3.0</td>
-    <td><a href="http://www.acl.lanl.gov/distributions/pooma-2.3.0.tgz">pooma-2.3.0.tgz</a></td>
+    <td><a href="ftp://gcc.gnu.org/pub/gcc/infrastructure/pooma-gcc.tar.gz">pooma-gcc.tar.gz</a></td>
     <td><a href="testing-pooma.html">build and test guide</a></td>
 </tr>
 <tr><td><a href="http://www.trolltech.com/products/qt/index.html">Qt</a></td>
@@ -276,7 +276,8 @@ of G++ to deal with templates, an area that has historically been buggy.
 In addition, templates have historically taken inordinately much time and
 memory at compile-time.  With the widespread prevalence of templates in
 C++ programs, including the standard library, testing this area heavily is
-vitally important.</p>
+vitally important. Pooma-gcc is pooma-2.3.0 plus some scripts which
+simplify testing.</p>
 
 <p>LAPACK is a well known linear algebra package that contains code
 typical for large scale Fortran programs.</p>
