Mention that type based alias analysis has been implemented for C++ aggregate types. By Dan Nicolaescu <dann@godzilla.ics.uci.edu>.

--- a/htdocs/gcc-3.2/changes.html
+++ b/htdocs/gcc-3.2/changes.html
@@ -28,7 +28,8 @@
 <h2>New Languages and Language specific improvements</h2>
 
   <ul>
-    <li>...</li>
+    <li>Type based alias analysis has been implemented for C++
+    aggregate types. </li>
   </ul>
 
 
