--- a/htdocs/libstdc++/status.html
+++ b/htdocs/libstdc++/status.html
@@ -52,7 +52,7 @@
 </p>
 
 <p>The most recent version of this library that will build with
-   <a href="../gcc-2.95">GCC 2.95.2</a>
+   <a href="../gcc-2.95/">GCC 2.95.2</a>
    is the ninth snapshot release,
    <a href="download.html">libstdc++-2.90.8.tar.gz</a>.
 </p>
