* old-news.html (happening): Update link to Classpath.

--- a/htdocs/java/old-news.html
+++ b/htdocs/java/old-news.html
@@ -302,7 +302,7 @@ for programs that use interfaces or things like ``instanceof''.
 We are relicensing libgcj to a more liberal license, and we're
 assigning copyright to the <a href="http://www.gnu.org/">FSF</a>.
 This will let us share code with the
-<a href="http://www.classpath.org">Classpath</a> project.
+<a href="http://www.gnu.org/software/classpath/">Classpath</a> project.
 </td></tr>
 
 <tr><td valign="top">
