Update/remove changed/broken links.

--- a/htdocs/projects/ast-optimizer.html
+++ b/htdocs/projects/ast-optimizer.html
@@ -26,7 +26,7 @@ the source program.</p>
 
 <p>Historically, GCC generated RTL one statement at a time, so
 the AST did not stay around very long. This has changed with 'function
-at a time' compilation (<a href="/news/inlining.html">Inliner</a>),
+at a time' compilation (<a href="../news/inlining.html">Inliner</a>),
 which both C and C++ frontends now implement. With the AST for complete
 functions, and the additional semantic information they contain, the
 opportunity for new optimizations presents itself.</p>
@@ -87,7 +87,8 @@ Its version string is 'ast-optimizer-branch'.</p>
 compiler time &amp; memory usage at -O3. This is particularly nasty for
 heavily templated C++ code. A new bottom up inliner is available for
 testing, which it is hoped will provide better -O3 performance.
-See <a href="/ml/gcc-patches/2001-07/msg00859.html">this thread</a>.</p>
+See <a href="http://gcc.gnu.org/ml/gcc-patches/2001-07/msg00859.html">this
+thread</a>.</p>
 
 <h3><a name="ssa_for_trees">SSA for trees</a></h3>
 
