--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -31,11 +31,6 @@
   Example Language</a> by Jonathan Bartlett &lt;<a
   href="mailto:johnnyb@wolfram.com">johnnyb@wolfram.com</a>&gt;.</li>
 
-  <li><a
-  href="http://www.geocities.com/timjosling/treelang.diff.txt">Treelang
-  sample language for current snapshot</a> updated by Tim Josling
-  &lt;<a href="mailto:tej@melbpc.org.au">tej@melbpc.org.au</a>&gt;.</li>
-
   <li><a href="http://wwwspies.informatik.tu-muenchen.de/personen/pizka/">GNU INSEL Compiler gic</a>.</li>
 
   <li><a href="http://www.codesourcery.com/cxx-abi/">
@@ -81,7 +76,7 @@ tahoe. These are listed here just for completeness.
  </li>
 
  <li>arc
-  <br />Manufacturer: <a href="http://www.arccores.com">ARC Cores (Argonaut)</a>
+  <br />Manufacturer: <a href="http://www.arc.com">ARC Cores (Argonaut)</a>
  </li>
 
  <li>arm (armv2, thumb)
@@ -137,7 +132,6 @@ tahoe. These are listed here just for completeness.
  <li>fr30
    <br />Manufacturer: <a href="http://www.fmap.com.sg/">Fujitsu</a>
    <br />Acronym stands for: Fujitsu RISC
-   <br /><a href="http://www.fmap.com.sg/products/mcu_fr30.htm">FR Overview</a>
    <br />GDB includes a <a href="http://sources.redhat.com/cgen/">CGEN</a>
    generated simulator.
  </li>
@@ -145,7 +139,6 @@ tahoe. These are listed here just for completeness.
  <li>h8300
    <br />Manufacturer: <a href="http://www.hitachi.com/">Hitachi</a>
    <br />Exact chip name: H8/300
-   <br /><a href="http://semiconductor.hitachi.com/h8/">H8 Homepage</a>
    <br />GDB includes a simulator.
  </li>
  
@@ -219,8 +212,6 @@ tahoe. These are listed here just for completeness.
 	http://www.mips.com/publications/index.html</a></li>
     <li><a href="http://www.necel.com/home.nsf/ViewAttachments/U13569EJ4V1UM00/$file/U13569EJ4V1UM00.pdf">
         MIPS16 information from the Vr4121</a> Documentation.</li>
-    <li><a href="http://www.necel.com/web/products/Microprocessors/index.html">
-    Various MIPS implementations</a> from NEC.</li>
   </ul>
  </li>
  
@@ -287,13 +278,11 @@ tahoe. These are listed here just for completeness.
  <li>rs6000 (powerpc, powerpcle)
   <br />Manufacturer: <a href="http://www.ibm.com">IBM</a>,
        <a href="http://www.motorola.com/">Motorola</a>
-  <br /><a href="http://www.rs6000.ibm.com/doc_link/en_US/a_doc_lib/aixassem/alangref/toc.htm">AIX V4.3 Assembler Language Ref.</a>
  </li>
  
  <li>sh
   <br />Manufacturer: <a href="http://www.hitachi.com">Hitachi</a>
   <br />Exact chip name: SuperH
-  <br /><a href="http://semiconductor.hitachi.com/superh/">SuperH Home Page</a>
   <br />GDB includes a simulator.
  </li>
  
