- restore AIX assembler language reference links.

--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -278,6 +278,8 @@ tahoe. These are listed here just for completeness.
  <li>rs6000 (powerpc, powerpcle)
   <br />Manufacturer: <a href="http://www.ibm.com">IBM</a>,
        <a href="http://www.motorola.com/">Motorola</a>
+  <br /><a href="http://publib.boulder.ibm.com/doc_link/en_US/a_doc_lib/aixassem/alangref/toc.htm">AIX V4.3 Assembler Language Ref.</a>
+  <br /><a href="http://publibn.boulder.ibm.com/doc_link/en_US/a_doc_lib/aixassem/alangref/alangreftfrm.htm">AIX 5L Assembler Language Ref.</a>
  </li>
  
  <li>sh
