Remove references to Chill. By Steven Bosscher <s.bosscher@student.tudelft.nl>.

--- a/htdocs/projects/index.html
+++ b/htdocs/projects/index.html
@@ -29,7 +29,6 @@
 <li><a href="#improvements_to_gcse_and_pre">Improvements to global cse and partial redundancy elimination:</a></li>
 <li><a href="#miscellaneous_ideas">Miscellaneous ideas:</a>
 <ul>
-<li><a href="#chill_should_use_gc">Chill should use garbage collection</a></li>
 <li><a href="#improve_wconversion">Improve <code>-Wconversion</code></a></li>
 <li><a href="#implement_various_builtin_functions_for_isoc99">Implement various builtin functions for ISO C99's 
 <code>&lt;tgmath.h&gt;</code></a></li>
@@ -217,10 +216,6 @@ you're interested in working on lazy code motion.</p>
 
 <p>The following are some miscellaneous ideas for GCC projects to work
 on.</p>
-
-<h3><a name="chill_should_use_gc">Chill should use garbage collection</a></h3>
-<p>Convert the Chill front end to use garbage collection instead of
-obstacks, so it can work again with current GCC.</p>
 
 <h3><a name="improve_wconversion">Improve <code>-Wconversion</code></a></h3>
 <p>Improve <code>-Wconversion</code> so that it can be used for
@@ -799,7 +794,7 @@ kind of addressing, and this pattern would have:</p>
 
 <h2><a name="other_languages">Other languages</a></h2>
 
-<p>We currently have front ends for Ada, C, C++, Objective C, CHILL,
+<p>We currently have front ends for Ada, C, C++, Objective C, 
 Fortran, and Java.  A Pascal front end exists but has not yet
 been integrated.</p>
 
