--- a/htdocs/gcc-3.1/changes.html
+++ b/htdocs/gcc-3.1/changes.html
@@ -65,10 +65,13 @@
 <li><code>java.lang.Character</code> was rewritten to comply with
     the Unicode 3.0 standard.</li>
 <li>Partial support for many more locales was added to libgcj.</li>
-<li>Fortran improvements are listed in              
-    <a href="http://gcc.gnu.org/onlinedocs/g77_news.html">the Fortran
-    documentation</a>.</li>
 </ul>
+
+<h3>Fortran</h3>
+
+<p>Fortran improvements are listed in              
+<a href="http://gcc.gnu.org/onlinedocs/g77_news.html">the Fortran
+documentation</a>.</p>
 
 
 <h2>New Targets and Target Specific Improvements</h2>
