--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -495,6 +495,9 @@ tahoe. These are listed here just for completeness.
 
   <li><a href="http://www.arm.com/armwww.ns4/img/12-Technical+Specs-ARM+ELF+Specification+PDF/$File/ARMELFA08.pdf">ARM ELF ABI</a></li>
 
+  <li><a href=" http://www.eagercon.com/dwarf/dwarf3std.htm">DWARF 3
+  drafts</a></li>
+
   <li><a href="http://www.eagercon.com/dwarf/dwarf2std.htm">DWARF 2.1
   drafts</a></li>
 
