Mention documentation improvements. Originally by Steven Bosscher <s.bosscher@student.tudelft.nl>.

--- a/htdocs/gcc-3.1/changes.html
+++ b/htdocs/gcc-3.1/changes.html
@@ -123,6 +123,15 @@ documentation</a>.</p>
 
 <h2>Documentation improvements</h2>
 
+<ul>
+<li>The old manual (&quot;Using and Porting the GNU Compiler
+    Collection&quot;) has been replaced by a users manual (&quot;Using the
+    GNU Compiler Collection&quot;) and a separate internals reference
+    manual (&quot;GNU Compiler Collection Internals&quot;).</li>
+<li>More complete and much improved documentation about GCC's
+    internal representation used by the C and C++ front ends.</li>
+<li>Many cleanups and improvements in general.</li>
+</ul>
 
 <h2>Other significant improvements</h2>
 
