Link to GNAT Reference Manual.  Do not link to Chill manual.

--- a/htdocs/onlinedocs/index.html
+++ b/htdocs/onlinedocs/index.html
@@ -161,6 +161,9 @@ existing release.</p>
   <li><a href="http://gcc.gnu.org/onlinedocs/gcj/">GCJ Manual</a> (<a
          href="http://gcc.gnu.org/onlinedocs/gcj.ps.gz">also in
          PostScript</a>)</li>
+  <li><a href="http://gcc.gnu.org/onlinedocs/gnat_rm/">GNAT Reference Manual</a> (<a
+         href="http://gcc.gnu.org/onlinedocs/gnat_rm.ps.gz">also in
+         PostScript</a>)</li>
   <li><a href="http://gcc.gnu.org/onlinedocs/cpp/">CPP Manual</a> (<a
          href="http://gcc.gnu.org/onlinedocs/cpp.ps.gz">also in
          PostScript</a>)</li>
@@ -172,10 +175,6 @@ existing release.</p>
   <li><a href="http://gcc.gnu.org/onlinedocs/porting/">libstdc++-v3
        Porting Manual</a> (<a
          href="http://gcc.gnu.org/onlinedocs/porting.ps.gz">also in
-         PostScript</a>)</li>
-  <li><a href="http://gcc.gnu.org/onlinedocs/chill/">Chill
-      Manual</a> (<a
-         href="http://gcc.gnu.org/onlinedocs/chill.ps.gz">also in
          PostScript</a>)</li>
   <li><a href="http://gcc.gnu.org/onlinedocs/libiberty/">Libiberty
       Manual</a> (<a
