Document obsoleted targets

--- a/htdocs/gcc-3.1/changes.html
+++ b/htdocs/gcc-3.1/changes.html
@@ -120,6 +120,117 @@ documentation</a>.</p>
     support it.  See <code>-maltivec</code>.</li>
 </ul>
 
+</ul>
+
+<h2>Obsolete Targets</h2>
+
+<p>Support for a number of older systems has been declared obsolete in
+GCC 3.1.  Unless there is activity to revive them, the next
+release of GCC will have their sources permanently REMOVED.</p>
+
+<p>All configurations of the following processor architectures have
+been declared obsolete:</p>
+
+<ul>
+   <li>MIL-STD-1750A, <code>1750a-*-*</code></li>
+   <li>Convex, <code>c*-convex-*</code></li>
+   <li>Clipper, <code>clipper-*-*</code></li>
+   <li>Elxsi, <code>elxsi-*-*</code></li>
+   <li>Intel i860, <code>i860-*-*</code></li>
+   <li>Sun picoJava, <code>pj-*-*</code> and <code>pjl-*-*</code></li>
+   <li>Western Electric 32000, <code>we32k-*-*</code></li>
+</ul>
+
+<p>Most configurations of the following processor architectures have
+been declared obsolete, but we are preserving a few systems which may
+have active developers.  It is unlikely that the remaining systems
+will survive much longer unless we see definite signs of port
+activity.</p>
+
+<ul>
+  <li>AMD A29k except
+      <ul><li>Generic COFF, <code>a29k-*-udi</code>
+                        and <code>a29k-*-coff</code>.</li></ul>
+  </li>
+  <li>Motorola 88000 except
+      <ul>
+        <li>Generic a.out, <code>m88k-*-aout*</code></li>
+        <li>Generic SVR4, <code>m88k-*-sysv4</code></li>
+        <li>OpenBSD, <code>m88k-*-openbsd*</code></li>
+      </ul>
+  </li>
+  <li>NS32k except
+      <ul>
+        <li>NetBSD, <code>ns32k-*-netbsd*</code></li>
+	<li>OpenBSD, <code>ns32k-*-openbsd*</code>.</li>
+      </ul>
+  </li>
+  <li>ROMP except
+      <ul><li>OpenBSD, <code>romp-*-openbsd*</code>.</li></ul>
+  </li>
+</ul>
+
+<p>Finally, only some configurations of these processor architectures
+are being obsoleted.</p>
+
+<ul>
+  <li>Alpha:
+      <ul><li>OSF V1.0 before 4.0, <code>alpha-*-osf[123]*</code>.</li></ul>
+  <li>ARM:
+      <ul><li>RISCiX, <code>arm-*-riscix*</code>.</li></ul>
+  <li>i386:
+      <ul>
+	<li>386BSD, <code>i?86-*-bsd*</code></li>
+	<li>Chorus, <code>i?86-*-chorusos*</code></li>
+	<li>DG/UX, <code>i?86-*-dgux*</code></li>
+	<li>FreeBSD 1.x, <code>i?86-*-freebsd1.*</code></li>
+	<li>IBM AIX, <code>i?86-*-aix*</code></li>
+	<li>ISC UNIX, <code>i?86-*-isc*</code></li>
+	<li>Linux with pre-BFD linker, <code>i?86-*-linux*oldld*</code></li>
+	<li>NEXTstep, <code>i?86-next-*</code></li>
+	<li>OSF UNIX, <code>i?86-*-osf1*</code> and 
+		      <code>i?86-*-osfrose*</code></li>
+	<li>RTEMS/coff, <code>i?86-*-rtemscoff*</code></li>
+	<li>RTEMS/go32, <code>i?86-go32-rtems*</code></li>
+	<li>Sequent/BSD, <code>i?86-sequent-bsd*</code></li>
+	<li>Sequent/ptx before version 3, 
+		<code>i?86-sequent-ptx[12]*</code> and 
+		<code>i?86-sequent-sysv3*</code></li> 
+	<li>SunOS, <code>i?86-*-sunos*</code></li>
+     </ul>
+  </li>
+  <li>Motorola 68000:
+      <ul>
+	<li>Altos, <code>m68[k0]*-altos-*</code></li>
+	<li>Apollo, <code>m68[k0]*-apollo-*</code></li>
+	<li>Apple A/UX, <code>m68[k0]*-apple-*</code></li>
+	<li>Bull, <code>m68[k0]*-bull-*</code></li>
+	<li>Convergent, <code>m68[k0]*-convergent-*</code></li>
+	<li>Generic SVR3, <code>m68[k0]*-*-sysv3*</code></li>
+	<li>ISI, <code>m68[k0]*-isi-*</code></li>
+	<li>LynxOS, <code>m68[k0]*-*-lynxos*</code></li>
+	<li>NEXT, <code>m68[k0]*-next-*</code></li>
+	<li>RTEMS/coff, <code>m68[k0]*-*-rtemscoff*</code></li>
+	<li>Sony, <code>m68[k0]*-sony-*</code></li>
+      </ul>
+  </li>
+  <li>MIPS:
+      <ul>
+	<li>DEC Ultrix, <code>mips-*-ultrix*</code> and
+			<code>mips-dec-*</code></li>
+	<li>Generic BSD, <code>mips-*-bsd*</code></li>
+	<li>Generic System V, <code>mips-*-sysv*</code></li>
+	<li>IRIX before version 5, <code>mips-sgi-irix[1234]*</code></li>
+	<li>RiscOS, <code>mips-*-riscos*</code></li>
+	<li>Sony, <code>mips-sony-*</code></li>
+	<li>Tandem, <code>mips-tandem-*</code></li>
+      </ul>
+   </li>
+   <li>Sparc:
+      <ul><li>RTEMS/a.out, <code>sparc-*-rtemsaout*</code>.</li></ul>
+   </li>
+</ul>
+
 
 <h2>Documentation improvements</h2>
 
