--- a/htdocs/gcc-3.0/buildstat.html
+++ b/htdocs/gcc-3.0/buildstat.html
@@ -915,7 +915,8 @@ Installing GCC: Final Installation</a>.</p>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2001-10/msg00647.html">3.0.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2002-02/msg01661.html">3.0.4</a>,
-<a href="http://gcc.gnu.org/ml/gcc/2002-02/msg01701.html">3.0.4</a></td>
+<a href="http://gcc.gnu.org/ml/gcc/2002-02/msg01701.html">3.0.4</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2002-04/msg01167.html">3.0.4</a></td>
 </tr>
 
 <tr>
