* index.html: Changed -R to --resource.

--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -163,7 +163,8 @@ protocol handler.  The gcj runtime places "core:/" at the end of the
 java.class.path, ensuring that compiled-in resource files are
 discovered and loaded when required.  This is a convenient feature for
 building and deploying libraries and executables with no external file
-dependencies.  See the "-R" option in the gcj manual for details.
+dependencies.  See the <code>--resource</code> option in the gcj
+manual for details.
 </td></tr>
 
 <tr><td valign="top">
