Mention gcj --resource, not -R

--- a/htdocs/gcc-3.1/changes.html
+++ b/htdocs/gcc-3.1/changes.html
@@ -49,7 +49,7 @@
 <li>libgcj now includes RMI, <code>java.lang.ref.*</code>,
     <code>javax.naming</code>, and <code>javax.transaction</code>.</li>
 <li>Property files and other system resources can be compiled into
-    executables which use libgcj using the new <code>gcj -R</code>
+    executables which use libgcj using the new <code>gcj --resource</code>
     feature.</li>
 <li>libgcj has been ported to more platforms.  In particular there
     is now a mostly-functional mingw32 target port.</li>
