* gcj-3.1-status.html (Classpath, Mauve): Updated status

--- a/htdocs/java/gcj-3.1-status.html
+++ b/htdocs/java/gcj-3.1-status.html
@@ -113,8 +113,8 @@ href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?database=gcc&amp;text=&amp;multitex
 <tr><th> Package </th> <th> Status </th> <th> Who </th> </tr>
 
 <tr> <td> Classpath build </td>
-     <td> Known bugs; see above </td>
-     <td> Alex (?) </td>
+     <td> Ok </td>
+     <td> Mark Wielaard </td>
 </tr>
 
 <tr> <td> rhug </td>
@@ -123,8 +123,8 @@ href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?database=gcc&amp;text=&amp;multitex
 </tr>
 
 <tr> <td> Mauve </td>
-     <td> Unknown </td>
-     <td> Tom </td>
+     <td> Ok </td>
+     <td> Mark Wielaard </td>
 </tr>
 
 </table>
