Clarify Digital Unix; use correct capitalization for SPARC

--- a/htdocs/gcc-3.1/changes.html
+++ b/htdocs/gcc-3.1/changes.html
@@ -175,7 +175,9 @@ are being obsoleted.</p>
 
 <ul>
   <li>Alpha:
-      <ul><li>OSF V1.0 before 4.0, <code>alpha-*-osf[123]*</code>.</li></ul>
+      <ul><li>OSF/1, <code>alpha*-*-osf[123]*</code>.
+	  (Digital Unix and Tru64 Unix, aka <code>alpha*-*-osf[45]</code>,
+	  are still supported.)</li></ul>
   <li>ARM:
       <ul><li>RISCiX, <code>arm-*-riscix*</code>.</li></ul>
   <li>i386:
@@ -226,7 +228,7 @@ are being obsoleted.</p>
 	<li>Tandem, <code>mips-tandem-*</code></li>
       </ul>
    </li>
-   <li>Sparc:
+   <li>SPARC:
       <ul><li>RTEMS/a.out, <code>sparc-*-rtemsaout*</code>.</li></ul>
    </li>
 </ul>
