Mention a patch needed for cygwin, as suggested by David Billinghurst.

--- a/htdocs/gcc-3.1/testing-blitz.html
+++ b/htdocs/gcc-3.1/testing-blitz.html
@@ -42,6 +42,10 @@ programs takes a lot of additional time.</p>
 </li>
 </ul>
 
+<p>On some platforms, particularly Cygwin, you'll also need to apply
+<a href="http://gcc.gnu.org/ml/libstdc++/2001-06/msg00074.html">this patch</a>;
+without it, <code>example/random.cpp</code> doesn't build.</p>
+
 <h2>Configure</h2>
 
 <p>You can use the simplest form of configuration if the directory
